# community-energy-orchestrator

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/certs/: README.md
.devcontainer/scripts/: post-create.sh
.github/workflows/: ci.yml
backend/app/: main.py
backend/workflow/: __init__.py  calculate_community_analysis.py  change_weather_location_regex.py  config.py  debug_outputs.py  outputs.py  paths.py  process_community_workflow.py  requirements.py  service.py
csv/: communities-hdd-and-weather-location.csv  communities-number-of-houses.csv  community_locations.csv  location_code.csv  region_code.csv  train-test communities hdd and weather locations.csv  weather_details.csv
data/json/: communities.json
docs/: BACKGROUND.md  COMMUNITIES.md  DEVELOPMENT.md  DOCKER.md  INSTALLATION.md  USER_GUIDE.md
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: AnalysisVisualization.jsx  App.jsx  CommunityOverview.jsx  DailyEnergyChart.jsx  DailyLoadChart.jsx  PeakDayChart.jsx  api.js  index.css  units.js
src/: calculate_community_analysis.py  change_weather_location_regex.py  debug_outputs.py  debug_timeseries_outputs.py  main.py  process_community_workflow.py
src/app/: main.py
src/data scrubbing/: README.md  quick-start.txt  scrubbing-h2k-files.py
src/workflow/: __init__.py  calculate_community_analysis.py  change_weather_location_regex.py  config.py  core.py  debug_outputs.py  outputs.py  process_community_workflow.py  requirements.py  service.py
tests/: conftest.py
tests/integration/: __init__.py  test_calculate_community_analysis.py  test_change_weather_location_regex.py  test_debug_outputs.py  test_docker.py  test_workflow.py
tests/unit/: test_api_endpoints.py  test_calculate_community_analysis.py  test_change_weather_location_regex.py  test_config.py  test_core.py  test_debug_outputs.py  test_outputs.py  test_process_community_workflow.py  test_requirements.py
tools/data-scrubbing/: scrubbing-h2k-files.py
