[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "community-energy-orchestrator"
version = "0.1.0"
description = "Community energy modeling workflow orchestrator with FastAPI"
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [
    {name = "Community Energy Team"}
]

dependencies = [
    "numpy==1.26.2",
    "pandas>=2.2.0",
    "python-dateutil==2.8.2",
    "pytz==2023.3.post1",
    "six==1.16.0",
    "tzdata==2023.3",
    "xmltodict==0.13.0",
    "unidecode==1.3.8",
    "click==8.1.7",
    "colorama==0.4.6",
    "pyfiglet==1.0.2",
    "requests>=2.32.4",
    "filelock==3.18.0",
    "pyyaml==6.0.1",
    "packaging>=20.0",
    "openstudio==3.9.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
    "h2k-hpxml @ file:src/h2k-hpxml ; python_version < '3.14'",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "pylint",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.black]
line-length = 100

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
]
