[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "community-energy-orchestrator"
version = "0.1.0"
description = "Community energy modeling workflow orchestrator with FastAPI"
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [
    {name = "Community Energy Team"}
]

dependencies = [
    "numpy==1.26.2",
    "pandas>=2.2.0",
    "h2k-hpxml @ git+https://github.com/canmet-energy/h2k-hpxml.git@932e016efb2570dc006d60cfa32664d699315b24",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "pylint",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.black]
line-length = 100

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
]
